# RemoText

./: CHANGELOG.md  Cargo.lock.bak  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: cli.md  cross-platform.md  index.md  protocol.md  requirements.md  roadmap.md  security.md  technical-design.md
scripts/: install.ps1  install.sh
src/: auth.rs  client.rs  files.rs  framing.rs  lib.rs  main.rs  protocol.rs  server.rs  session.rs  ticket.rs  update.rs
tests/: cli.rs  remotext.rs
